# Agent-MCP

./: .env  LICENSE  README.md  main.py  pyproject.toml
custom_agents/: planning.py  researcher.py  run.py
mcp-client/: client.py  openai-agent.py  smithery_client.py  test.py
mcp-server/: web_search.py
websearch/: pyproject.toml
